# ML_Zero_Downtime

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  rebuild.sh  rebuild_finitions.sh
.github/workflows/: devsecops.yml
docs/: conf.py  index.rst
src/api/: Dockerfile  main.py
src/front/: Dockerfile  main.py
src/train/: Dockerfile  train.py
tests/: test_api.py
